--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
